--- a/admin/edit.dev.css
+++ b/admin/edit.dev.css
@@ -4,21 +4,32 @@
  * @since 1.0.0
  */
 
+/* hour glass cursor, while waiting for AJAX */
 body.wait * {
 	cursor: wait!important;
 }
 
-.tp-hidden-container {
+/* container for preview and advanced editor */
+.hidden-container {
 	display: none;
 }
 
+#table-preview-iframe {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	border: none;
+}
+
+/* Cancel and OK button in advanced editor */
 .advanced-editor-button {
 	margin-top: 3px;
 	float: right;
 }
 
-.tp-animation-saving,
-.tp-animation-preview {
+/* spinner/loading animation while saving/preview preparation */
+.animation-saving,
+.animation-preview {
 	display: inline-block;
 	background: url(../../../../wp-admin/images/wpspin_light.gif);
 	height: 16px;
@@ -27,50 +38,55 @@ body.wait * {
 	vertical-align: top;
 }
 
-.tp-save-changes-success {
+/* fading messages after AJAX */
+.save-changes-success {
 	margin-left: 5px;
 	background-color: #00ff00;
 }
-
-.tp-save-changes-error,
-.tp-preview-error {
+.save-changes-error,
+.preview-error {
 	margin-left: 5px;
 	background-color: #ff0000;
 }
 
-#tp-edit-body td {
+/* table cells */
+#edit-form-body td {
 	padding: 2px 2px 2px 0px;
 	height: 32px;
 }
 
-#tp-edit-body input[type="checkbox"] {
-	margin-right: 3px;
+/* cells of currently focussed row/autogrow */
+#edit-form-body .focus td {
+	height: 60px;
 }
 
-#tp-edit-foot input[type="checkbox"] {
-	margin-top: 4px;
+/* alternating row colors */
+#edit-form-body .odd {
+	background-color: #eeeeee;
 }
 
-#tp-edit-body textarea {
+#edit-form-body textarea {
 	display: block;
 	width: 150px;
 	height: 100%;
 }
-
-#tp-edit-body textarea:focus {
-	outline: none;
-	border: 1px solid #000000;
+#edit-form-body textarea:focus {
+	border-color: #000000;
 }
 
-#tp-edit-body .focus td {
-	height: 60px;
+#edit-form-body input[type="checkbox"] {
+	margin-right: 3px;
+}
+#edit-form-foot input[type="checkbox"] {
+	margin-top: 6px;
 }
 
-#tp-edit {
+#edit-form {
 	border-collapse: collapse;
 }
 
-#tp-edit .move-handle {
+/* row and column moving with jQueryUI sortable */
+#edit-form .move-handle {
 	display: block;
 	margin: auto;
 	width: 16px;
@@ -80,37 +96,34 @@ body.wait * {
 	font-weight: bold;
 }
 
-#tp-edit-body .move-handle {
+#edit-form-body .move-handle {
 	margin: auto 3px;
 	min-width: 16px;
 	width: auto;
 }
 
-#tp-edit .move-hover {
+#edit-form .move-hover {
 	position: absolute;
 	z-index: 1000;
-	height: 26px; /* height of "#tp-edit-body td" - 6px */
+	height: 26px; /* height of "#edit-form-body td" - 6px */
 }
 
-#tp-edit .focus .move-hover {
-	height: 54px; /* height of "#tp-edit-body .focus td" - 6px */
+#edit-form .focus .move-hover {
+	height: 54px; /* height of "#edit-form-body .focus td" - 6px */
 }
 
-#tp-edit-body .odd {
-	background-color: #eeeeee;
-}
-
-#tp-edit-body .head-row,
-#tp-edit-body .foot-row {
+/* hightlighting of table head and foot in table cells */
+#edit-form-body .head-row,
+#edit-form-body .foot-row {
 	background-color: #c0dddd;
 }
 
-#tp-edit-head th {
+/* head cells (column letters) and sorting */
+#edit-form-head th {
 	height: 16px;
 	vertical-align: top;
 }
-
-#tp-edit-head .sort-control {
+#edit-form-head .sort-control {
 	display: none;
 	float: right;
 	width: 12px;
@@ -118,38 +131,29 @@ body.wait * {
 	cursor: pointer;
 	margin: 2px 3px 0 0;
 }
-
-#tp-edit-head .head:hover .sort-control {
+#edit-form-head .head:hover .sort-control {
 	display: block;
 }
-
-#tp-edit-head .ui-sortable-helper:hover .sort-control {
+#edit-form-head .ui-sortable-helper:hover .sort-control {
 	display: none;
 }
-
-#tp-edit-head .sort-asc {
+#edit-form-head .sort-asc {
 	background: url(img/sort-asc.gif) no-repeat center center;
 }
-
-#tp-edit-head .sort-desc {
+#edit-form-head .sort-desc {
 	background: url(img/sort-desc.gif) no-repeat center center;
 }
 
-#tp-edit .row-hidden td,
-/* #tp-edit .row-hidden th, */
-#tp-edit .row-hidden textarea,
-#tp-edit .column-hidden,
-#tp-edit .column-hidden textarea {
+/* (red) highlighting of hidden rows and columns */
+#edit-form .row-hidden td,
+/* #edit-form .row-hidden th, */
+#edit-form .row-hidden textarea,
+#edit-form .column-hidden,
+#edit-form .column-hidden textarea {
 	background-color: #ffe0e0;
 }
 
-#tp-preview-iframe {
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	border: none;
-}
-
+/* tables for "Table Manipulation" and "Table Options" */
 .tablepress-postbox-table {
 	border-spacing: 0px;
 	width: 800px;
