Show Preview button is now a link, to make the Preview available for non-JS (open in new window/tab); add checks on whether table could actually be loaded on a few actions

--- a/admin/edit.dev.css
+++ b/admin/edit.dev.css
@@ -212,7 +212,7 @@ body.wait * {
 }
 
 /* adjust size of a.button-secondary to input.button-secondary */
-#tablepress_edit-table-manipulation a.button-secondary {
+#tablepress-page a.button-secondary {
 	padding: 3px 8px;
 	display: inline-block;
 	margin: 1px;
