Use HTML5 form elements (<input type="number" /"> for numeric fields, and a pattern for the table ID. Add some styling for invalid/required fields.

--- a/admin/common.dev.css
+++ b/admin/common.dev.css
@@ -87,3 +87,8 @@
 	cursor: auto;
 	color: #464646;
 }
+
+/* red border for form fields that have invalid values */
+#tablepress-page form :invalid {
+	border-color: #cc0000 !important;
+}
