Better handling of search/sort/pagination on "All Tables" view (with WP_List_Table) (so that current setting is kept on action) - by moving the <form> tags; add current search term as ".subtitle"; slightly modify WP_List_Table::no_items() to have different messages between "no tables at all" and "no tables on this page" (e.g. due to search);

--- a/admin/common.dev.css
+++ b/admin/common.dev.css
@@ -72,6 +72,12 @@
 	width: 130px;
 }
 
+/* Search results for WP_List_Table */
+#tablepress-page .subtitle {
+	float: left;
+	padding-left: 0px;
+}
+
 /* remove outlines from all textareas */
 #tablepress-page textarea {
 	outline: none;
