--- a/admin/edit.dev.css
+++ b/admin/edit.dev.css
@@ -210,3 +210,10 @@ body.wait * {
 	margin: 1px;
 	line-height: 13px;
 }
+
+#tablepress_edit-table-information th {
+	padding: 6px 2px;
+}
+#tablepress_edit-table-information td {
+	padding: 2px 0 0;
+}
