--- a/admin/common.dev.css
+++ b/admin/common.dev.css
@@ -126,7 +126,8 @@
 }
 
 /* red border for form fields that have invalid values */
-#tablepress-page form :invalid {
+#tablepress-page form :invalid,
+#tablepress-page form .invalid {
 	border-color: #cc0000 !important;
 }
 
