Add "Help" box for colspan/rowspan on "Edit" screen; Add links on WP Plugins page; Add support for easily adding available languages (and their related data); prepare "Import" view for import from WP-Table Reloaded

--- a/admin/edit.dev.css
+++ b/admin/edit.dev.css
@@ -14,6 +14,11 @@ body.wait * {
 	display: none;
 }
 
+/* Margin in Help boxes */
+.hidden-help-box-container p {
+	margin: 6px;
+}
+
 /* move Thickbox more to the front, so that it's always above a jQuery UI dialog */
 #TB_HideSelect {
 	z-index: 301099;
