--- a/css/default.css
+++ b/css/default.css
@@ -6,7 +6,7 @@
 
 .tablepress {
 	border-collapse: collapse;
-	border-spacing: 0px;
+	border-spacing: 0;
 	text-align: left;
 }
 
@@ -15,20 +15,32 @@
 	padding: 8px;
 }
 
-.dataTables_wrapper .tablepress td.center,
-.dataTables_wrapper .tablepress td.dataTables_empty {
-	text-align: center;
+.tablepress th {
+	font-weight: bold;
 }
 
+/* Vertical lines / borders */
+.tablepress tbody tr,
+.tablepress tfoot tr {
+    border-top: 1px solid #dddddd;
+}
+.tablepress tbody tr:first-child {
+	border-top: 0;
+}
+.tablepress thead tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+/* Row background colors */
 .tablepress thead tr,
 .tablepress tfoot tr {
-	background-color: #e6eeee;
+	background-color: #d9edf7;
 }
-.tablepress tbody tr.odd { background-color: #f0f0f6; }
+.tablepress tbody tr.odd { background-color: #f9f9f9; }
 .tablepress tbody tr.even { background-color: #ffffff; }
 
 .tablepress .row-hover tr:hover {
-	background-color: #D0D0D6!important;
+	background-color: #f3f3f3;
 }
 
 /* Table wrapper */
@@ -38,40 +50,32 @@
 	*zoom: 1;
 }
 .dataTables_wrapper .tablepress {
+	width: 100%;
 	clear: both;
 }
 
-/*
- * Page length menu
- */
+/* Length Change menu */
 .dataTables_length {
 	float: left;
 }
 
-/*
- * Filter
- */
+/* Filter/Search */
 .dataTables_filter {
 	float: right;
 	text-align: right;
 }
 
-/*
- * Table information
- */
+/* Table information */
 .dataTables_info {
 	clear: both;
 	float: left;
 }
 
-/*
- * Pagination
- */
+/* Pagination */
 .dataTables_paginate {
 	float: right;
 	text-align: right;
 }
-
 /* Two button pagination - previous/next */
 .paginate_disabled_previous,
 .paginate_enabled_previous,
@@ -108,25 +112,21 @@
 	padding-right: 23px;
 	margin-left: 10px;
 }
-.paginate_enabled_previous { background: url('../images/back_enabled.png') no-repeat top left; }
-.paginate_enabled_previous:hover { background: url('../images/back_enabled_hover.png') no-repeat top left; }
-.paginate_disabled_previous { background: url('../images/back_disabled.png') no-repeat top left; }
+.paginate_enabled_previous { background: url('../img/back_enabled.png') no-repeat top left; }
+.paginate_enabled_previous:hover { background: url('../img/back_enabled_hover.png') no-repeat top left; }
+.paginate_disabled_previous { background: url('../img/back_disabled.png') no-repeat top left; }
 /* hover */
-.paginate_enabled_next { background: url('../images/forward_enabled.png') no-repeat top right; }
-.paginate_enabled_next:hover { background: url('../images/forward_enabled_hover.png') no-repeat top right; }
-.paginate_disabled_next { background: url('../images/forward_disabled.png') no-repeat top right; }
+.paginate_enabled_next { background: url('../img/forward_enabled.png') no-repeat top right; }
+.paginate_enabled_next:hover { background: url('../img/forward_enabled_hover.png') no-repeat top right; }
+.paginate_disabled_next { background: url('../img/forward_disabled.png') no-repeat top right; }
 
 /* Full number pagination */
 .paging_full_numbers {
 	height: 22px;
 	line-height: 22px;
 }
-.paging_full_numbers a:active {
-	outline: none
-}
-.paging_full_numbers a:hover {
-	text-decoration: none;
-}
+.paging_full_numbers a:active { outline: none; }
+.paging_full_numbers a:hover { text-decoration: none; }
 
 .paging_full_numbers a.paginate_button,
 .paging_full_numbers a.paginate_active {
@@ -140,25 +140,21 @@
 	*cursor: hand;
 	color: #333333 !important;
 }
-
 .paging_full_numbers a.paginate_button {
 	background-color: #dddddd;
 }
-
 .paging_full_numbers a.paginate_button:hover {
 	background-color: #cccccc;
 	text-decoration: none !important;
 }
-
 .paging_full_numbers a.paginate_active {
 	background-color: #99b3ff;
 }
 
-/*
- * Processing indicator
- */
+/* Processing indicator */
 .dataTables_processing {
-	position: absolute;
+	display: none; /* always hidden, we don't really need it */
+/*	position: absolute;
 	top: 50%;
 	left: 50%;
 	width: 250px;
@@ -171,11 +167,10 @@
 	color: #999;
 	font-size: 14px;
 	background-color: white;
+*/
 }
 
-/*
- * Scrolling
- */
+/* Scrolling */
 .dataTables_scroll {
 	clear: both;
 }
@@ -183,25 +178,23 @@
 	*margin-top: -1px;
 }
 
-/*
- * Sorting
- */
+/* Sorting */
 .dataTables_wrapper .sorting,
 .dataTables_wrapper .sorting_asc,
 .dataTables_wrapper .sorting_desc {
+	padding: 8px 18px 8px 8px; /* more right padding for sort arrows */
 	cursor: pointer;
 	*cursor: hand;
 }
-.dataTables_wrapper .sorting { background: url('../images/sort_both.png') no-repeat center right; }
-.dataTables_wrapper .sorting_asc { background: url('../images/sort_asc.png') no-repeat center right; }
-.dataTables_wrapper .sorting_desc { background: url('../images/sort_desc.png') no-repeat center right; }
+.dataTables_wrapper .sorting { background: url('../img/both.gif') no-repeat center right; }
+.dataTables_wrapper .sorting:hover { background-color: #049cdb; }
+.dataTables_wrapper .sorting_asc { background: #049cdb url('../img/asc.gif') no-repeat center right; }
+.dataTables_wrapper .sorting_desc { background: #049cdb url('../img/desc.gif') no-repeat center right; }
 
-.dataTables_wrapper .sorting_asc_disabled { background: url('../images/sort_asc_disabled.png') no-repeat center right; }
-.dataTables_wrapper .sorting_desc_disabled { background: url('../images/sort_desc_disabled.png') no-repeat center right; }
+.dataTables_wrapper .sorting_asc_disabled { background: url('../img/sort_asc_disabled.png') no-repeat center right; }
+.dataTables_wrapper .sorting_desc_disabled { background: url('../img/sort_desc_disabled.png') no-repeat center right; }
 
-.dataTables_wrapper th:active {
-	outline: none;
-}
+.dataTables_wrapper th:active { outline: none; }
 
 /* RTL languages */
 .tablepress-rtl {
@@ -212,4 +205,5 @@
 .dataTables_wrapper .tablepress-rtl .sorting_asc,
 .dataTables_wrapper .tablepress-rtl .sorting_desc {
 	background-position: left !important;
+	padding: 8px 8px 8px 18px; /* more left padding for sort arrows */
 }
