Add header comments to CSS and JS files

--- a/admin/common.dev.css
+++ b/admin/common.dev.css
@@ -1,6 +1,9 @@
 /**
+ * CSS code for all TablePress admin screens
  *
- *
+ * @package TablePress
+ * @subpackage Views CSS
+ * @author Tobias Bäthge
  * @since 1.0.0
  */
 
