--- a/admin/edit.dev.css
+++ b/admin/edit.dev.css
@@ -1,6 +1,9 @@
 /**
+ * CSS code for the "Edit" screen
  *
- *
+ * @package TablePress
+ * @subpackage Views CSS
+ * @author Tobias Bäthge
  * @since 1.0.0
  */
 
