--- a/admin/codemirror.css
+++ b/admin/codemirror.css
@@ -185,7 +185,9 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 	margin: 1px;
 }
 #tablepress-page .CodeMirror-focused {
-	border-color: #bbbbbb;
+	border-color: #a1a1a1;
+	-webkit-box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+	box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
 }
 #tablepress-page .CodeMirror-scroll {
 	height: 100px;
