--- a/admin/codemirror.css
+++ b/admin/codemirror.css
@@ -173,6 +173,7 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 }
 
 /* CodeMirror Styling for TablePress page/customizations compared to original CSS in this file */
+#option-custom-css,
 #tablepress-page .CodeMirror-scroll {
 	background-color: #ffffff;
 	border-color: #dfdfdf;
@@ -182,17 +183,18 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 	border-style: solid;
 	cursor: text;
 	width: 98%;
+	height: 100px;
 	margin: 1px;
+}
+#tablepress-page .CodeMirror-scroll.disabled {
+	background-color: #eeeeee;
+	height: 100px !important;
 }
 #tablepress-page .CodeMirror-focused {
 	border-color: #a1a1a1;
 	-webkit-box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
 	box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
 }
-#tablepress-page .CodeMirror-scroll {
-	height: 100px;
-}
-#option-custom-css,
 #tablepress-page .large .CodeMirror-scroll {
 	height: 250px;
 }
