--- a/admin/common.css
+++ b/admin/common.css
@@ -115,6 +115,8 @@
 	margin: 0;
 	padding: 0;
 	font-weight: bold;
+	-webkit-box-shadow: none;
+	box-shadow: none;
 }
 #tablepress-page .table-shortcode {
 	cursor: text;
