--- a/admin/codemirror.css
+++ b/admin/codemirror.css
@@ -173,12 +173,18 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 }
 
 /* CodeMirror Styling for TablePress page/customizations compared to original CSS in this file */
+#option-custom-css,
 #tablepress-page .CodeMirror {
 	font-family: Consolas, Monaco, monospace;
 	font-size: 12px;
 	line-height: inherit;
+	margin-bottom: 6px;
 }
-#option-custom-css,
+#option-custom-css {
+	width: 98%;
+	height: 102px;
+	margin: 1px;
+}
 #tablepress-page .CodeMirror-scroll {
 	background-color: #ffffff;
 	border-color: #dfdfdf;
@@ -191,10 +197,14 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 	height: 100px;
 	margin: 1px;
 }
+#tablepress-page .CodeMirror-lines {
+	padding: 3px;
+}
 #tablepress-page .CodeMirror-scroll.disabled {
 	background-color: #eeeeee;
 	height: 100px !important;
 }
+#option-custom-css:focus,
 #tablepress-page .CodeMirror-focused {
 	border-color: #a1a1a1;
 	-webkit-box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
