Use WP's existing spinner, instead of direct URL of the image (which can break if wp-content is moved); this will break the spinner for WP <3.5, but as the mouse cursor is still changed, this is ok

--- a/admin/edit.css
+++ b/admin/edit.css
@@ -67,13 +67,11 @@ body.wait * {
 }
 
 /* spinner/loading animation while saving/preview preparation */
-.animation-saving,
-.animation-preview {
+.spinner.animation-saving,
+.spinner.animation-preview {
 	display: inline-block;
-	background: url(../../../../wp-admin/images/wpspin_light.gif);
-	height: 16px;
-	width: 16px;
-	margin: 4px 0 0 5px;
+	float: none;
+	margin: 7px 0 0 7px;
 	vertical-align: top;
 }
 
